# openmaskit

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  coverage.json  marketplace.json  mask-slack.yaml  maskit.yaml  openmaskit.yaml  pyproject.toml  test_container_runtime.py
.claude/: settings.json
.claude/skills/omrelease/: SKILL.md
.github/workflows/: publish.yml  test.yml
src/maskit/: __init__.py  __main__.py  backend_client.py  cli.py  config.py  container.py  logging_config.py  models.py  security.py
src/maskit/masking/: engine.py  mappers.py  rules.py  store.py
src/maskit/oauth/: handler.py
src/maskit/proxy/: core.py  http_downstream.py  manager.py  upstream.py
src/maskit/traffic/: buffer.py  store.py
src/maskit/web/: app.py  health.py  origin.py
src/maskit/web/routes/: custom_targets.py  guardrails.py  injections.py  mappers.py  marketplace.py  oauth_callback.py  pages.py  rules.py  setup.py  traffic.py
src/maskit/web/static/: index.html  marketplace.html  onboarding.css  setup.html  shared.js  style.css  targets.html  tool_detail.html  tools.html  tutorial.css  tutorial.js
src/maskit/web/static/tutorials/: guardrails.json  hide-tool.json  injections.json  input-masking.json  output-mappers-with-result.json  output-mappers.json
src/openmaskit/: __init__.py  __main__.py  backend_client.py  cli.py  config.py  config_serde.py  container.py  logging_config.py  models.py  security.py
src/openmaskit/masking/: engine.py  mappers.py  parsing.py  rules.py  store.py
src/openmaskit/oauth/: authorize_url.py  code_exchange.py  discovery.py  handler.py  install_flow.py  sdk_patches.py
src/openmaskit/proxy/: core.py  http_downstream.py  manager.py  upstream.py
src/openmaskit/traffic/: buffer.py  store.py
src/openmaskit/web/: app.py  body_limit.py  csrf.py  health.py  origin.py
src/openmaskit/web/routes/: _http_config.py  custom_targets.py  guardrails.py  hidden_tools.py  injections.py  install_check.py  mappers.py  marketplace.py  oauth.py  oauth_callback.py  pages.py  rules.py  traffic.py
src/openmaskit/web/static/: marketplace.html  onboarding.css  shared.js  style.css  targets.html  tool_detail.html  tools.html  tutorial.css  tutorial.js
src/openmaskit/web/static/tutorials/: guardrails.json  injections.json  masking-with-result.json  masking.json
tests/: test_authorize_url.py  test_backend_client.py  test_body_limit.py  test_cli.py  test_code_exchange.py  test_config.py  test_config_serde.py  test_container.py  test_csrf_middleware.py  test_custom_targets.py  test_custom_targets_headers.py  test_engine.py  test_guardrails.py  test_guardrails_routes.py  test_health.py  test_http_downstream.py  test_http_downstream_no_leak.py  test_injections.py  test_injections_routes.py  test_install_check.py  test_install_flow.py  test_logging_config.py  test_main.py  test_mappers.py  test_mappers_routes.py  test_marketplace.py  test_marketplace_headers.py  test_oauth.py  test_oauth_discovery.py  test_oauth_state_cleanup.py  test_origin_middleware.py  test_parsing.py  test_proxy.py  test_proxy_manager.py  test_proxy_upstream.py  test_sdk_patches.py  test_security.py  test_shutdown.py  test_store.py  test_store_encryption.py  (+8 more)
tests/e2e/: README.md  conftest.py  test_alias_isolation.py  test_custom_stdio.py  test_marketplace_lifecycle.py  test_postgres_flow.py  test_rules_variants.py
tests/e2e/fixtures/: stub_mcp_server.py
