[project]
name = "openmaskit"
version = "0.3.1"
description = "Drop-in MCP proxy that keeps your secrets out of the context window"
readme = "README.md"
authors = [
    { name = "Amin Malekloo", email = "openmaskit@maskitmcp.com" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["mcp", "proxy", "security", "data-masking", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp[cli]>=1.27.0",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "anyio>=4.0",
    "cryptography>=48.0.0",  # For OAuth token encryption
    "pyahocorasick>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/MaskitMCP/openmaskit"
Repository = "https://github.com/MaskitMCP/openmaskit"
Issues = "https://github.com/MaskitMCP/openmaskit/issues"

[project.scripts]
openmaskit = "openmaskit.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openmaskit"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude",
    ".codegraph",
    ".coverage",
    "coverage.json",
    "bench_unmask.py",
    "CLAUDE.md",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
